Fixed surefire JVM args to pick up ${surefire.system.args}. Made debugging work.