@@ -171,7 +171,7 @@
                         <udpGroup>${udpGroup}</udpGroup>
 
                         <!-- Used in arquillian.xml -->
-                        <server.jvm.args>-Xmx512m -XX:MaxPermSize=129m ${ip.server.stack}</server.jvm.args>
+                        <server.jvm.args>${surefire.system.args} ${ip.server.stack}</server.jvm.args>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
